--- a/Memory Card/Memory Card.csproj
+++ b/Memory Card/Memory Card.csproj
@@ -46,16 +46,64 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="From\CaiDat\MenuSetting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\CaiDat\MenuSetting.Designer.cs">
+      <DependentUpon>MenuSetting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\HuongDan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\HuongDan.Designer.cs">
+      <DependentUpon>HuongDan.cs</DependentUpon>
+    </Compile>
     <Compile Include="From\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="From\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="From\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\MenuForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\MenuForm.Designer.cs">
+      <DependentUpon>MenuForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\OutOrSave.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\OutOrSave.Designer.cs">
+      <DependentUpon>OutOrSave.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\Ranking.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\Ranking.Designer.cs">
+      <DependentUpon>Ranking.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\TongKet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\TongKet.Designer.cs">
+      <DependentUpon>TongKet.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="From\CaiDat\MenuSetting.resx">
+      <DependentUpon>MenuSetting.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="From\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="From\MenuForm.resx">
+      <DependentUpon>MenuForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -76,6 +124,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="From\LevelForm\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
