--- a/Memory Card/Memory Card.csproj
+++ b/Memory Card/Memory Card.csproj
@@ -69,4 +69,90 @@
     <Compile Include="From\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\LoginForm.Designer.cs
+    <Compile Include="From\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+
+    <Compile Include="From\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+
+    <Compile Include="From\MenuForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\MenuForm.Designer.cs">
+      <DependentUpon>MenuForm.cs</DependentUpon>
+    </Compile>
+
+    <Compile Include="From\OutOrSave.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\OutOrSave.Designer.cs">
+      <DependentUpon>OutOrSave.cs</DependentUpon>
+    </Compile>
+
+    <Compile Include="From\Ranking.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\Ranking.Designer.cs">
+      <DependentUpon>Ranking.cs</DependentUpon>
+    </Compile>
+
+    <Compile Include="From\TongKet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\TongKet.Designer.cs">
+      <DependentUpon>TongKet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\TongKetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\TongKetForm.Designer.cs">
+      <DependentUpon>TongKetForm.cs</DependentUpon>
+    </Compile>
+
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    
+    <EmbeddedResource Include="From\CaiDat\MenuSetting.resx">
+      <DependentUpon>MenuSetting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="From\HuongDanForm.resx">
+      <DependentUpon>HuongDanForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="From\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="From\MenuForm.resx">
+      <DependentUpon>MenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="From\TongKetForm.resx">
+      <DependentUpon>TongKetForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="From\LevelForm\" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+</Project>
