--- a/Memory Card/Memory Card.csproj
+++ b/Memory Card/Memory Card.csproj
@@ -46,12 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="From\CaiDat\CaiDatForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="From\CaiDat\CaiDatForm.Designer.cs">
-      <DependentUpon>CaiDatForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="From\DangNhapForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,14 +78,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="From\CaiDat\CaiDatForm.resx">
-      <DependentUpon>CaiDatForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="From\DangNhapForm.resx">
       <DependentUpon>DangNhapForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="From\HuongDanForm.resx">
       <DependentUpon>HuongDanForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="From\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="From\MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
@@ -119,6 +113,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="From\CaiDat\" />
     <Folder Include="From\LevelForm\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
