--- a/Memory Card/Memory Card.csproj
+++ b/Memory Card/Memory Card.csproj
@@ -64,6 +64,12 @@
     <Compile Include="From\HuongDanForm.Designer.cs">
       <DependentUpon>HuongDanForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="From\LuuTrangThaiForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\LuuTrangThaiForm.Designer.cs">
+      <DependentUpon>LuuTrangThaiForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="From\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,12 @@
     <Compile Include="From\TongKetForm.Designer.cs">
       <DependentUpon>TongKetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="From\XepHangForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\XepHangForm.Designer.cs">
+      <DependentUpon>XepHangForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="From\CaiDat\CaiDatForm.resx">
@@ -93,11 +105,17 @@
     <EmbeddedResource Include="From\HuongDanForm.resx">
       <DependentUpon>HuongDanForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="From\LuuTrangThaiForm.resx">
+      <DependentUpon>LuuTrangThaiForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="From\MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="From\TongKetForm.resx">
       <DependentUpon>TongKetForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="From\XepHangForm.resx">
+      <DependentUpon>XepHangForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -107,6 +125,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -120,6 +139,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="From\LevelForm\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ảnh chụp màn hình 2026-02-25 224449.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
