--- a/Memory Card/Memory Card.csproj
+++ b/Memory Card/Memory Card.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="From\CaiDat\CaiDatForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\CaiDat\CaiDatForm.Designer.cs">
+      <DependentUpon>CaiDatForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="From\DangNhapForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="From\CaiDat\CaiDatForm.resx">
+      <DependentUpon>CaiDatForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="From\DangNhapForm.resx">
       <DependentUpon>DangNhapForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -131,8 +140,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="From\CaiDat\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
